# ka-destinations

./: .gitignore  AGENTS.md  Makefile  PRODUCT_BOUNDARY.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: product-boundary.md
src/ka_destinations/: __init__.py  cli.py  gdocs.py
tests/: test_cli_behavior.py  test_cli_smoke.py  test_gdocs.py
